hub-network-with-nva/template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "secondOctet": {
            "type": "int",
            "metadata": {
                "description": "The value to use in the second octet of the hub virtual network"
            }
        }
    },
    "variables": {
        "addressSpace": "[concat('10.', parameters('secondOctet'),'.0.0/16')]",
        "addressSpaceFirewallPublic": "[concat('10.', parameters('secondOctet'),'.254.0/24')]",
        "addressSpaceFirewallPrivate": "[concat('10.', parameters('secondOctet'),'.255.0/24')]",
        "addressSpaceDefault": "[concat('10.', parameters('secondOctet'),'.0.0/24')]",
        //"disks_fw_vyos_disk_name": "[concat('fw-', resourceGroup().location, '-vyos-disk')]",
        "fwPublicIP": "[concat('10.', parameters('secondOctet'),'.254.4')]",
        "fwPrivateIP": "[concat('10.', parameters('secondOctet'),'.255.4')]",
        "networkInterfaces_fw_nic_private_name": "[concat('fw-', resourceGroup().location, '-nic-private')]",
        "networkInterfaces_fw_nic_public_name": "[concat('fw-', resourceGroup().location, '-nic-public')]",
        "networkSecurityGroups_nsg_snet_firewall_private_001_name": "[concat('nsg-snet-firewall-private-', resourceGroup().location, '-001')]",
        "networkSecurityGroups_nsg_snet_firewall_public_001_name": "[concat('nsg-snet-firewall-public-', resourceGroup().location, '-001')]",
        "publicIPAddresses_fw_pip_name": "[concat('fw-', resourceGroup().location, '-pip')]",
        "routeTables_rt_firewall_internet_name": "[concat('rt-firewall-internet-', resourceGroup().location, '')]",
        "routeTables_rt_firewall_name": "[concat('rt-firewall-', resourceGroup().location, '')]",
        "storageAccounts_stgpwhfw_name": "[concat('stgpwhfw', resourceGroup().location, '')]",
        "virtualMachines_fw_name": "[concat('fw-', resourceGroup().location)]",
        "virtualNetworks_vnet_hub_name": "[concat('vnet-hub-', resourceGroup().location, '')]"
    },
    "resources": [
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2020-05-01",
            "name": "[variables('networkSecurityGroups_nsg_snet_firewall_private_001_name')]",
            "location": "[resourceGroup().location]",
            "properties": {
                "securityRules": [
                    {
                        "name": "Allow_all_forwarding",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 2000,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [
                                "10.0.0.0/8",
                                "172.16.0.0/12",
                                "192.168.0.0/16",
                                "100.64.0.0/10"
                            ],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2020-05-01",
            "name": "[variables('networkSecurityGroups_nsg_snet_firewall_public_001_name')]",
            "location": "[resourceGroup().location]",
            "properties": {
                "securityRules": [
                    {
                        "name": "Mgmt_home.phealy.com",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "199.27.255.101",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [
                                "22",
                                "80",
                                "443",
                                "40180"
                            ],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2020-05-01",
            "name": "[variables('publicIPAddresses_fw_pip_name')]",
            "location": "[resourceGroup().location]",
            "sku": {
                "name": "Standard"
            },
            "properties": {
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Static",
                "idleTimeoutInMinutes": 4
            }
        },
        {
            "type": "Microsoft.Network/routeTables",
            "apiVersion": "2020-05-01",
            "name": "[variables('routeTables_rt_firewall_name')]",
            "location": "[resourceGroup().location]",
            "properties": {
                "disableBgpRoutePropagation": true,
                "routes": [
                    {
                        "name": "firewall",
                        "properties": {
                            "addressPrefix": "0.0.0.0/0",
                            "nextHopType": "VirtualAppliance",
                            "nextHopIpAddress": "[variables('fwPrivateIP')]"
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/routeTables",
            "apiVersion": "2020-05-01",
            "name": "[variables('routeTables_rt_firewall_internet_name')]",
            "location": "[resourceGroup().location]",
            "properties": {
                "disableBgpRoutePropagation": true,
                "routes": [
                    {
                        "name": "RFC1918-10",
                        "properties": {
                            "addressPrefix": "10.0.0.0/8",
                            "nextHopType": "VirtualAppliance",
                            "nextHopIpAddress": "[variables('fwPrivateIP')]"
                        }
                    },
                    {
                        "name": "RFC1918-172",
                        "properties": {
                            "addressPrefix": "172.16.0.0/12",
                            "nextHopType": "VirtualAppliance",
                            "nextHopIpAddress": "[variables('fwPrivateIP')]"
                        }
                    },
                    {
                        "name": "RFC1918-192",
                        "properties": {
                            "addressPrefix": "192.168.0.0/16",
                            "nextHopType": "VirtualAppliance",
                            "nextHopIpAddress": "[variables('fwPrivateIP')]"
                        }
                    },
                    {
                        "name": "RFC6598",
                        "properties": {
                            "addressPrefix": "100.64.0.0/10",
                            "nextHopType": "VirtualAppliance",
                            "nextHopIpAddress": "[variables('fwPrivateIP')]"
                        }
                    },
                    {
                        "name": "Internet",
                        "properties": {
                            "addressPrefix": "0.0.0.0/0",
                            "nextHopType": "Internet"
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Storage/storageAccounts",
            "apiVersion": "2019-06-01",
            "name": "[variables('storageAccounts_stgpwhfw_name')]",
            "location": "[resourceGroup().location]",
            "sku": {
                "name": "Standard_LRS",
                "tier": "Standard"
            },
            "kind": "StorageV2",
            "properties": {
                "networkAcls": {
                    "bypass": "AzureServices",
                    "defaultAction": "Allow"
                },
                "supportsHttpsTrafficOnly": true,
                "accessTier": "Cool"
            }
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2020-05-01",
            "name": "[variables('networkInterfaces_fw_nic_private_name')]",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('virtualNetworks_vnet_hub_name'), concat('snet-firewall-private-', resourceGroup().location))]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAddress": "[variables('fwPrivateIP')]",
                            "privateIPAllocationMethod": "Static",
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('virtualNetworks_vnet_hub_name'), concat('snet-firewall-private-', resourceGroup().location))]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": []
                },
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": true
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "apiVersion": "2020-05-01",
            "name": "[concat(variables('networkSecurityGroups_nsg_snet_firewall_public_001_name'), '/Mgmt_home.phealy.com')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroups_nsg_snet_firewall_public_001_name'))]"
            ],
            "properties": {
                "protocol": "*",
                "sourcePortRange": "*",
                "sourceAddressPrefix": "199.27.255.101",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 100,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [
                    "22",
                    "80",
                    "443",
                    "40180"
                ],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            }
        },
//        {
//            "type": "Microsoft.Compute/disks",
//            "apiVersion": "2020-06-30",
//            "name": "[variables('disks_fw_vyos_disk_name')]",
//            "location": "[resourceGroup().location]",
//            "sku": {
//                "name": "Premium_LRS"
//            },
//            "properties": {
//                "osType": "Linux",
//                "hyperVGeneration": "V2",
//                "creationData": {
//                    "createOption": "Copy",
//                    "galleryImageReference": {
//                        "id": "/subscriptions/0f7710f5-70d5-444c-aaf1-a59dc913dbc4/resourceGroups/RG-IMAGES-EASTUS/providers/Microsoft.Compute/images/vyos-2020.10.19"
//                    }
//                },
//                "diskSizeGB": 4
//            }
//        },
        {
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2020-06-01",
            "name": "[variables('virtualMachines_fw_name')]",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', variables('networkInterfaces_fw_nic_public_name'))]",
                "[resourceId('Microsoft.Network/networkInterfaces', variables('networkInterfaces_fw_nic_private_name'))]",
                "[resourceId('Microsoft.Storage/StorageAccounts', variables('storageAccounts_stgpwhfw_name'))]"
            ],
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_B1s"
                },
                "storageProfile": {
                    "osDisk": {
                        "createOption": "fromImage",
                        "managedDisk": {
                            "storageAccountType": "Premium_LRS"
                        }
                    },
                    "imageReference": {
                        "id": "/subscriptions/0f7710f5-70d5-444c-aaf1-a59dc913dbc4/resourceGroups/rg-images-eastus/providers/Microsoft.Compute/galleries/pahealy/images/vyos"
                    },
                    "dataDisks": []
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('networkInterfaces_fw_nic_public_name'))]",
                            "properties": {
                                "primary": true
                            }
                        },
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('networkInterfaces_fw_nic_private_name'))]",
                            "properties": {
                                "primary": false
                            }
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": true,
                        "storageUri": "[concat('https://', variables('storageAccounts_stgpwhfw_name'), '.blob.core.windows.net/')]"
                    }
                }
            }
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2020-05-01",
            "name": "[variables('networkInterfaces_fw_nic_public_name')]",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', variables('publicIPAddresses_fw_pip_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('virtualNetworks_vnet_hub_name'), concat('snet-firewall-public-', resourceGroup().location))]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAddress": "[variables('fwPublicIP')]",
                            "privateIPAllocationMethod": "Static",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', variables('publicIPAddresses_fw_pip_name'))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('virtualNetworks_vnet_hub_name'), concat('snet-firewall-public-', resourceGroup().location))]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": []
                },
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": true
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "apiVersion": "2020-05-01",
            "name": "[concat(variables('virtualNetworks_vnet_hub_name'), '/snet-default-', resourceGroup().location)]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', variables('virtualNetworks_vnet_hub_name'))]",
                "[resourceId('Microsoft.Network/routeTables', variables('routeTables_rt_firewall_name'))]"
            ],
            "properties": {
                "addressPrefix": "[variables('addressSpaceDefault')]",
                "routeTable": {
                    "id": "[resourceId('Microsoft.Network/routeTables', variables('routeTables_rt_firewall_name'))]"
                },
                "serviceEndpoints": [],
                "delegations": [],
                "privateEndpointNetworkPolicies": "Enabled",
                "privateLinkServiceNetworkPolicies": "Enabled"
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "apiVersion": "2020-05-01",
            "name": "[concat(variables('virtualNetworks_vnet_hub_name'), '/snet-firewall-private-', resourceGroup().location)]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', variables('virtualNetworks_vnet_hub_name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroups_nsg_snet_firewall_private_001_name'))]"
            ],
            "properties": {
                "addressPrefix": "[variables('addressSpaceFirewallPrivate')]",
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroups_nsg_snet_firewall_private_001_name'))]"
                },
                "serviceEndpoints": [],
                "delegations": [],
                "privateEndpointNetworkPolicies": "Enabled",
                "privateLinkServiceNetworkPolicies": "Enabled"
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "apiVersion": "2020-05-01",
            "name": "[concat(variables('virtualNetworks_vnet_hub_name'), '/snet-firewall-public-', resourceGroup().location)]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', variables('virtualNetworks_vnet_hub_name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroups_nsg_snet_firewall_public_001_name'))]"
            ],
            "properties": {
                "addressPrefix": "[variables('addressSpaceFirewallPublic')]",
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroups_nsg_snet_firewall_public_001_name'))]"
                },
                "serviceEndpoints": [],
                "delegations": [],
                "privateEndpointNetworkPolicies": "Enabled",
                "privateLinkServiceNetworkPolicies": "Enabled"
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2020-05-01",
            "name": "[variables('virtualNetworks_vnet_hub_name')]",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroups_nsg_snet_firewall_private_001_name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroups_nsg_snet_firewall_public_001_name'))]",
                "[resourceId('Microsoft.Network/routeTables', variables('routeTables_rt_firewall_name'))]"
            ],
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[variables('addressSpace')]"
                    ]
                },
                "dhcpOptions": {
                    "dnsServers": [
                        "[variables('fwPrivateIP')]"
                    ]
                },
                "subnets": [
                    {
                        "name": "[concat('snet-firewall-private-', resourceGroup().location)]",
                        "properties": {
                            "addressPrefix": "[variables('addressSpaceFirewallPrivate')]",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroups_nsg_snet_firewall_private_001_name'))]"
                            },
                            "serviceEndpoints": [],
                            "delegations": [],
                            "privateEndpointNetworkPolicies": "Enabled",
                            "privateLinkServiceNetworkPolicies": "Enabled"
                        }
                    },
                    {
                        "name": "[concat('snet-firewall-public-', resourceGroup().location)]",
                        "properties": {
                            "addressPrefix": "[variables('addressSpaceFirewallPublic')]",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroups_nsg_snet_firewall_public_001_name'))]"
                            },
                            "serviceEndpoints": [],
                            "delegations": [],
                            "privateEndpointNetworkPolicies": "Enabled",
                            "privateLinkServiceNetworkPolicies": "Enabled"
                        }
                    },
                    {
                        "name": "[concat('snet-default-', resourceGroup().location)]",
                        "properties": {
                            "addressPrefix": "[variables('addressSpaceDefault')]",
                            "routeTable": {
                                "id": "[resourceId('Microsoft.Network/routeTables', variables('routeTables_rt_firewall_name'))]"
                            },
                            "serviceEndpoints": [],
                            "delegations": [],
                            "privateEndpointNetworkPolicies": "Enabled",
                            "privateLinkServiceNetworkPolicies": "Enabled"
                        }
                    }
                ],
                "virtualNetworkPeerings": [],
                "enableDdosProtection": false,
                "enableVmProtection": false
            }
        }
    ]
}
